welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: illegal start of simple expression
   	if (vuBiscuit())){
                        ^